--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
               <div class="container">
                   <div class="row">
                       <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                          <h1>Sheler Inu the<strong> community</strong> tokens<br>that saves <strong>abandonned pets</strong></h1>
-                          <p>Shelter Inu, the first token that helps animal shelters and offers a second chance to abandoned/abused fur balls, powered by every transaction made through our liquidity pool.</p>
+                          <h1>Shelter Inu the<strong> community</strong> token<br>that saves <strong>abandonned pets</strong></h1>
+                          <p>Shelter Inu, the first token that helps animal shelters and offers a second chance to abused fur balls, powered by every transaction made through our liquidity pool.</p>
                           <a href="#features" class="main-button-slider">Discover More</a>
                       </div>
                   </div>
@@ -322,7 +322,7 @@
                   <div class="row">
                       <div class="col-lg-3 col-md-6 col-sm-12">
                           <div class="count-item decoration-bottom">
-                              <strong>126</strong>
+                              <strong>NaN</strong>
                               <span>Current Marketcap</span>
                           </div>
                       </div>
@@ -382,7 +382,7 @@
 
                               </div>
                               <ul class="list">
-                                  <li class="active">BSC-20 tokens</li>
+                                  <li class="active">BEP-20 TOKEN</li>
                                   <li class="active">Buy on PancakeSwap</li>
                                   <li class="active">With Metamask or Trust Wallet</li>
 
@@ -408,10 +408,10 @@
 
                               </div>
                               <ul class="list">
-                                  <li class="active">3% is automatically added in the liquidity pool</li>
+                                  <li class="active">4% is redistributed to holders</li>
                                   <li class="active"></li>
-                                  <li class="active">2% is automatically sent to holders</li>
-                                  <li class="active"><strong> 3% is distributed to our charity wallet</strong></li>
+                                  <li class="active">4% ils redistributed to the Shelter wallet (donation and marketing</li>
+                                  <li class="active"> 2% is auto-added in the liquidity pool</li>
 
                               </ul>
                           </div>
@@ -425,19 +425,19 @@
                   <div class="col-lg-4 col-md-6 col-sm-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
                       <div class="pricing-item">
                           <div class="pricing-header">
-                              <h3 class="pricing-title">Burned (SOON) </h3>
+                              <h3 class="pricing-title">Black hole </h3>
                           </div>
                           <div class="pricing-body">
                               <div class="price-wrapper">
 
                                   <span class="price">30</span>
-                                  <span class="currency">%</span>
+                                  <span class="currency">% burnt</span>
                               </div>
                               <ul class="list">
                                   <li class="active">Since 30% of the supply is burn</li>
-                                  <li class="active">the adress collect a significant amount of tokens </li>
+                                  <li class="active">the dead adress collects a significant amount of token </li>
 
-                                  <li class="active">Every transaction becomes rarer</li>
+                                  <li class="active">Every transaction makes $SINU rarer</li>
 
                               </ul>
                           </div>
