--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                               <li><a href="#welcome" class="active">Home</a></li>
                               <li><a href="#features">About</a></li>
                               <li><a href="#work-process">Road Map</a></li>
-                              <li><a href="#testimonials">Buy $Shelter</a></li>
+                              <li><a href="#testimonials">Buy $SHINU</a></li>
                               <li><a href="#pricing-plans">Tokenomics</a></li>
 
                           </ul>
@@ -70,7 +70,7 @@
               <div class="container">
                   <div class="row">
                       <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                          <h1>Shelter Inu the<strong> community</strong> token<br>that saves <strong>abandonned pets</strong></h1>
+                          <h1><strong>SHELTER INU</strong><br> The only<strong> community</strong> token<br>that saves <strong>abandonned pets</strong></h1>
                           <p>Shelter Inu, the first token that helps animal shelters and offers a second chance to abused fur balls, powered by every transaction made through our liquidity pool.</p>
                           <a href="#features" class="main-button-slider">Discover More</a>
                       </div>
@@ -194,7 +194,7 @@
                               <span>Website</span>
                               <span>Whitepaper</span>
                               <span>Presale</span>
-                              <span>Linsting of $SINU</span>
+                              <span>Linsting of $SHINU</span>
                               <span>Marketing program</span>
                               <span>Community Events</span>
                               <span>Audit</span>
@@ -373,12 +373,12 @@
                   <div class="col-lg-4 col-md-6 col-sm-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s">
                       <div class="pricing-item">
                           <div class="pricing-header">
-                              <h3 class="pricing-title">Tokens</h3>
+                              <h3 class="pricing-title"><strong>$SHINU</strong></h3>
                           </div>
                           <div class="pricing-body">
                               <div class="price-wrapper">
 
-                                  <span class="price">1 000 000 billions</span>
+                                  <span class="price">1 000 000 Billions</span>
 
                               </div>
                               <ul class="list">
@@ -399,11 +399,11 @@
                   <div class="col-lg-4 col-md-6 col-sm-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
                       <div class="pricing-item active">
                           <div class="pricing-header">
-                              <h3 class="pricing-title">Tax</h3>
+                              <h3 class="pricing-title"><strong>TAX</strong></h3>
                           </div>
                           <div class="pricing-body">
                               <div class="price-wrapper">
-                                  <span class="price">8</span>
+                                  <span class="price">10</span>
                                   <span class="currency">%</span>
 
                               </div>
@@ -425,19 +425,19 @@
                   <div class="col-lg-4 col-md-6 col-sm-12" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
                       <div class="pricing-item">
                           <div class="pricing-header">
-                              <h3 class="pricing-title">Black hole </h3>
+                              <h3 class="pricing-title"><strong>BLACK HOLE</strong></h3>
                           </div>
                           <div class="pricing-body">
                               <div class="price-wrapper">
 
-                                  <span class="price">30</span>
-                                  <span class="currency">% burnt</span>
+                                  <span class="price">40</span>
+                                  <span class="currency">% Burnt</span>
                               </div>
                               <ul class="list">
-                                  <li class="active">Since 30% of the supply is burn</li>
+                                  <li class="active">Since 40% of the supply is burned</li>
                                   <li class="active">the dead adress collects a significant amount of token </li>
 
-                                  <li class="active">Every transaction makes $SINU rarer</li>
+                                  <li class="active">Every transaction makes $SHINU rarer</li>
 
                               </ul>
                           </div>
